# m13_email

./: .example.env  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
postgres-data/base/13481/: pg_internal.init
postgres-data/global/: pg_control  pg_internal.init
postgres-data/pg_stat/: db_0.stat  db_13481.stat  global.stat
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/routers/: users.py
src/services/: auth.py  email.py
tests/: test_pytest_services_email.py  test_unit_database_db.py  test_unit_services_auth.py  test_unit_services_email.py
